# brookmusicvisualizer

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
config/: project.config.json
docs/: ANNOTATIONS.md  AUDIO_SETUP.md  CREATIVE_WORKFLOW.md  GLOSSARY.md  GUIDE.md  LIMITATIONS.md  SCHEMA.md  STUDIO.md  timeline.schema.json
gallery/: README.md  gallery.js  index.html  manifest.json
midicore/: pyproject.toml  requirements.txt
midicore/midicore/: __init__.py  cli.py  exports.py  notes.py  parser.py  samples.py  schema.py  timing.py
midicore/tests/: conftest.py  test_parser.py  test_samples.py  test_timing.py
presets/: circular-classic.preset.json  noise-constellation.preset.json
renderer/: check-audio.js  render.js  server.js  setup-audio.js
renderer/lib/: audio.js  audio.test.js  config.js  ffmpeg.js  python.js
samples/: chord.mid  chord.timeline.json  multitrack.mid  multitrack.timeline.json  prelude_c.annotations.json  prelude_c.mid  prelude_c.timeline.json  scale.mid  scale.timeline.json  single_note.mid  single_note.timeline.json  sustain_demo.mid  sustain_demo.timeline.json  tempo_change.mid  tempo_change.timeline.json
studio/: index.html  render.html  vite.config.ts
studio/src/core/: annotations.test.ts  annotations.ts  frame-math.test.ts  frame-math.ts  timeline-types.ts  timing-engine.test.ts  timing-engine.ts
studio/src/render/: render-main.ts
studio/src/studio/: audio-preview.ts  main.ts  param-panel.ts  presets.ts  style.css
studio/src/visualizers/: palette.ts  params.test.ts  params.ts  registry.ts  types.ts
(+3 files in other folders)
