[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "midicore"
version = "1.0.0"
description = "Reusable MIDI -> normalized timeline JSON parser and timing query engine"
requires-python = ">=3.10"
dependencies = ["mido>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["midicore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
